# CME212

./: README.md
.svn/: wc.db
Assignment1/: imageanalysis.hpp  imageio  imageio.cpp  imageio.hpp  main
Assignment2/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac
Assignment2/autom4te.cache/: output.1  requests  traces.0  traces.1
Assignment2/data/: part2.txt  part2.txt~
Assignment3/: Makefile  Makefile.in  config.status  configure
Assignment3/autom4te.cache/: output.1  requests  (+2 more)
Assignment4/: Makefile  Makefile.in  cachegrind.out.main1  cachegrind.out.main2  config.h  config.status  configure  feedback.txt
Assignment6/: CMakeLists.txt~
Assignment6/code/: CMakeLists.txt  CMakeLists.txt~  VectorFieldC2_x1.txt  VectorFieldC2_x2.txt  VectorField_u1.txt  VectorField_u2.txt  cProfile_out  cachegrind.out.main  gmon.out  gprofile.out  main.c  main.c~  pivcext.c  pivcext.c~  pivcext.h  pivcext.h~  pivcext.i~  pivcext.py  pivcext_wrap.c  profileC_output  profile_output  setup.py  setup.py~
FinalProject/: -tests  CMakeLists.txt  Makefile  cg.out.main  gmon.out  main  main.out  sol10.vtk  sol20.vtk  solution04FD.vtk
FinalProjectPart2/: Makefile.in  cachegrind.out.main  gmon.out  main  main1.out
FinalProjectPart3/: CMakeLists.txt  CMakeLists.txt~  ConvertVTKBinaryToASCII  Makefile  aclocal.m4  code.py  feedback.txt  gmon.out  main.out  main1.out  main2  sol1.vtk  sol10.vtk  sol10Ascii.vtk  sol20.vtk  sol24.vtk  sol25.vtk  sol250.vtk  solution10_ref.vtk  solution_default.vtk  tests  tmp  tmp.vtk
(+99 files in other folders)
